# rust-work

nb-work/: Cargo.toml
nb-work/src/: main.rs
work1/src/: main.rs
work2/: 所有权.md
work2/src/: main.rs
work3/: Cargo.toml  application.yml
work3/entity/: Cargo.toml
work3/entity/src/: class.rs  club.rs  course.rs  lib.rs  student.rs
work3/examples/: clone.rs
work3/src/: cli.rs  main.rs
work3/src/config/: application_config.rs
work3/src/entity/: class.rs  club.rs  course.rs  mod.rs  student.rs
work3/src/service/: class_service.rs  mod.rs  student_service.rs
work4/: Cargo.toml
work4/src/: add_method.rs  enum_type.rs  trait_type.rs
work5/: Cargo.toml
work5/src/: main.rs
