[package]
name = "work3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "student-manage"
path = "src/bin/student-manage.rs"

[[bin]]
name = "sea-student-manage"
path = "src/bin/sea-student-manage.rs"

[dependencies]
serde_json = "1.0.103"
serde_yaml = "0.9.23"
tokio = { version = "1.29.1", features = ["full"] }
entity = { path = "entity" }