[package]
name = "work4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "enum_type"
path = "./src/enum_type.rs"

[[bin]]
name = "trait_type"
path = "./src/trait_type.rs"

[[bin]]
name = "add_method"
path = "./src/add_method.rs"

[dependencies]
